--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ sudo: false
 python:
   - 2.7
 before_install:
-  - pip install -r dev-requirements.txt
+  - git clone --quiet --depth 1 https://github.com/minrk/travis-wheels ~/travis-wheels
 install:
-  - pip install -e .
+  - PIP_FIND_LINKS=~/travis-wheels/wheelhouse pip install -r dev-requirements.txt -e .
 script:
   - py.test -v -x
