--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: python
 sudo: false
 python:
   - 2.7
+addons:
+  apt:
+    packages:
+    - scons
 before_install:
   - git clone --quiet --depth 1 https://github.com/minrk/travis-wheels ~/travis-wheels
 install:
