--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ addons:
 before_install:
   - git clone --quiet --depth 1 https://github.com/minrk/travis-wheels ~/travis-wheels
 install:
+  - pip install --egg scons
   - PIP_FIND_LINKS=~/travis-wheels/wheelhouse pip install -r dev-requirements.txt -e .
 script:
   - py.test -v -x
