--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 before_install:
   - git clone --quiet --depth 1 https://github.com/minrk/travis-wheels ~/travis-wheels
 install:
-  - pip install --egg scons
+  - pip install -U pip setuptools
   - PIP_FIND_LINKS=~/travis-wheels/wheelhouse pip install -r dev-requirements.txt -e .
 script:
   - py.test -v -x
