:construction_worker: Add Tox Test System
- Test against multiple Python versions
- Remove unncesary file
- Integrate Tox with Travis and simplify travis.yml
- Add test specific files to gitignore

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,8 @@ python:
   - 2.7
   - 3.5
   - 3.6
-before_install:
-  - git clone --quiet --depth 1 https://github.com/minrk/travis-wheels ~/travis-wheels
+  - 3.7-dev 
 install:
-  - pip install -U pip setuptools
-  - PIP_FIND_LINKS=~/travis-wheels/wheelhouse pip install -r dev-requirements.txt -e .
+  - pip install tox-travis
 script:
-  - py.test -v -x
+  - tox
