:sparkles: Add Custom Timeout - Closes #8
- Now one can set a timeout either through the scons command or directly in SConstruct. Use either of:
    - Run `scons timeout=TIMEINSECONDS` - This assumes the default SConstruct is used
    - In SConstruct invoke `setup(env, directories, timeout)`
- Add the test
- Modify example to simulate a long running task with time.sleep

--- a/nbflow/example/SConstruct
+++ b/nbflow/example/SConstruct
@@ -2,4 +2,8 @@ import os
 from nbflow.scons import setup
 
 env = Environment(ENV=os.environ)
-setup(env, ["analyses"])
+timeout = ARGUMENTS.get('timeout', 0)
+if int(timeout):
+    setup(env, ["analyses"], int(timeout))
+else:
+    setup(env, ["analyses"])
